@@ -3,7 +3,7 @@ module github.com/wealdtech/chaind
 go 1.15
 
 require (
-	github.com/attestantio/go-eth2-client v0.6.27
+	github.com/attestantio/go-eth2-client v0.6.28
 	github.com/jackc/pgtype v1.6.2
 	github.com/jackc/pgx/v4 v4.10.1
 	github.com/mitchellh/go-homedir v1.1.0
