@@ -42,48 +42,30 @@ func (s *Service) OnFinalityUpdated(
 	}
 	defer s.activitySem.Release(1)
 
-	md, err := s.getMetadata(ctx)
-	if err != nil {
-		log.Error().Err(err).Msg("Failed to obtain metadata on finality")
-		return
-	}
-
-	if err := s.onFinalityUpdatedEpochs(ctx, md, finalizedEpoch); err != nil {
+	if err := s.onFinalityUpdatedEpochs(ctx, finalizedEpoch); err != nil {
 		log.Warn().Err(err).Msg("Failed to update epochs")
 	}
-	if err := s.onFinalityUpdatedBlocks(ctx, md, finalizedEpoch); err != nil {
+	if err := s.onFinalityUpdatedBlocks(ctx, finalizedEpoch); err != nil {
 		log.Warn().Err(err).Msg("Failed to update blocks")
 	}
-	if err := s.onFinalityUpdatedValidators(ctx, md, finalizedEpoch); err != nil {
+	if err := s.onFinalityUpdatedValidators(ctx, finalizedEpoch); err != nil {
 		log.Warn().Err(err).Msg("Failed to update validators")
-	}
-
-	ctx, cancel, err := s.chainDB.BeginTx(ctx)
-	if err != nil {
-		log.Error().Err(err).Msg("Failed to begin transaction for summarizer metadata")
-		return
-	}
-	if err := s.setMetadata(ctx, md); err != nil {
-		cancel()
-		log.Error().Err(err).Msg("Failed to set summarizer metadata")
-		return
-	}
-	if err := s.chainDB.CommitTx(ctx); err != nil {
-		cancel()
-		log.Error().Err(err).Msg("Failed to commit transaction for summarizer metadata")
 	}
 
 	monitorEpochProcessed(finalizedEpoch - 1)
 	log.Trace().Msg("Finished handling finality checkpoint")
 }
 
-func (s *Service) onFinalityUpdatedEpochs(ctx context.Context,
-	md *metadata,
-	finalizedEpoch spec.Epoch,
-) error {
+func (s *Service) onFinalityUpdatedEpochs(ctx context.Context, finalizedEpoch spec.Epoch) error {
 	if !s.epochSummaries {
 		return nil
 	}
+
+	md, err := s.getMetadata(ctx)
+	if err != nil {
+		return errors.Wrap(err, "failed to obtain metadata for epoch summarizer")
+	}
+
 	lastEpoch := md.LastEpoch
 	if lastEpoch != 0 {
 		lastEpoch++
@@ -91,57 +73,81 @@ func (s *Service) onFinalityUpdatedEpochs(ctx context.Context,
 	log.Trace().Uint64("last_epoch", uint64(lastEpoch)).Uint64("finalized_epoch", uint64(finalizedEpoch)).Msg("Catchup bounds")
 
 	for epoch := lastEpoch; epoch <= finalizedEpoch; epoch++ {
-		if err := s.updateSummaryForEpoch(ctx, epoch); err != nil {
-			// Could have failed because we don't have balances, in which case don't error but do return.
-			if err.Error() != "no balances for epoch" {
-				return errors.Wrapf(err, "failed to update summary for epoch %d", epoch)
-			}
-			log.Debug().Uint64("epoch", uint64(epoch)).Msg("no balances for epoch; exiting update early")
+		updated, err := s.updateSummaryForEpoch(ctx, md, epoch)
+		if err != nil {
+			return errors.Wrapf(err, "failed to update summary for epoch %d", epoch)
+		}
+		if !updated {
+			log.Debug().Uint64("epoch", uint64(epoch)).Msg("not enough data to update summary")
 			return nil
 		}
-		md.LastEpoch = epoch
 	}
 
 	return nil
 }
 
 func (s *Service) onFinalityUpdatedBlocks(ctx context.Context,
-	md *metadata,
 	finalizedEpoch spec.Epoch,
 ) error {
 	if !s.blockSummaries {
 		return nil
 	}
+
+	md, err := s.getMetadata(ctx)
+	if err != nil {
+		return errors.Wrap(err, "failed to obtain metadata for block finality")
+	}
+
 	lastBlockEpoch := md.LastBlockEpoch
 	if lastBlockEpoch != 0 {
 		lastBlockEpoch++
 	}
+
+	// The last epoch updated in the meadata tells us how far we can summarize,
+	// as it checks for the component data.  As such, if the finalized epoch
+	// is beyond our summarized epoch we truncate to the summarized value.
+	// However, if we don't have validator balances the summarizer won't run at all
+	// for epochs, so if the last epoch is 0 we continue.
+	if finalizedEpoch > md.LastEpoch && md.LastEpoch != 0 {
+		finalizedEpoch = md.LastEpoch
+	}
+
 	for epoch := lastBlockEpoch; epoch <= finalizedEpoch; epoch++ {
-		if err := s.updateBlockSummariesForEpoch(ctx, epoch); err != nil {
+		if err := s.updateBlockSummariesForEpoch(ctx, md, epoch); err != nil {
 			return errors.Wrap(err, "failed to update block summaries for epoch")
 		}
-		md.LastBlockEpoch = epoch
 	}
 
 	return nil
 }
 
-func (s *Service) onFinalityUpdatedValidators(ctx context.Context,
-	md *metadata,
-	finalizedEpoch spec.Epoch,
-) error {
+func (s *Service) onFinalityUpdatedValidators(ctx context.Context, finalizedEpoch spec.Epoch) error {
 	if !s.validatorSummaries {
 		return nil
 	}
+
+	md, err := s.getMetadata(ctx)
+	if err != nil {
+		return errors.Wrap(err, "failed to obtain metadata for validator summarizer")
+	}
+
+	// The last epoch updated in the meadata tells us how far we can summarize,
+	// as it checks for the component data.  As such, if the finalized epoch
+	// is beyond our summarized epoch we truncate to the summarized value.
+	// However, if we don't have validator balances the summarizer won't run at all
+	// for epochs, so if the last epoch is 0 we continue.
+	if finalizedEpoch > md.LastEpoch && md.LastEpoch != 0 {
+		finalizedEpoch = md.LastEpoch
+	}
+
 	lastValidatorEpoch := md.LastValidatorEpoch
 	if lastValidatorEpoch != 0 {
 		lastValidatorEpoch++
 	}
 	for epoch := lastValidatorEpoch; epoch <= finalizedEpoch; epoch++ {
-		if err := s.updateValidatorSummariesForEpoch(ctx, epoch); err != nil {
+		if err := s.updateValidatorSummariesForEpoch(ctx, md, epoch); err != nil {
 			return errors.Wrap(err, "failed to update validator summaries for epoch")
 		}
-		md.LastValidatorEpoch = finalizedEpoch
 	}
 
 	return nil
